# django-dev-helpers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-help.md  autologin.md  configuration.md  dotfiles.md  quickstart.md  run-site-integration.md  security.md  standalone-usage.md  with-django-run-site.md
docs/design/: spec-v0.1.md
src/django_dev_helpers/: __init__.py  allowed_hosts.py  apps.py  browser.py  conf.py  dotfiles.py  gitignore.py  middleware.py  project_root.py  prompt.py  safety.py  sidecar.py  tokens.py  urls.py  views.py
src/django_dev_helpers/management/commands/: dev_helpers_check_gitignore.py  dev_helpers_doctor.py  dev_helpers_enable_agent_helpers.py  dev_helpers_fix_gitignore.py  dev_helpers_print_help.py  run_site.py
tests/: conftest.py  empty_urls.py  settings.py  test_agent_help.py  test_allowed_hosts.py  test_apps_ready.py  test_autologin_middleware.py  test_autologin_toggles.py  test_autologin_view.py  test_browser_probe.py  test_conf_validation.py  test_doctor.py  test_dotfiles.py  test_enable_agent_helpers.py  test_fix_gitignore_command.py  test_gitignore_check.py  test_kill_switch.py  test_middleware_autoinstall.py  test_run_site_command.py  test_settings_lookup.py  test_sidecar.py  test_standalone_token_generation.py  test_subprocess_token.py  test_view_methods.py  toggle_urls.py  urls.py
