[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-dev-helpers"
version = "0.1.5"
description = "Dev-time conveniences for Django projects: autologin endpoint, dotfiles for LLM agents, gitignore self-check"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "django-dev-helpers contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4",
    "django-stubs",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/iplweb/django-dev-helpers"
Repository = "https://github.com/iplweb/django-dev-helpers"
Issues = "https://github.com/iplweb/django-dev-helpers/issues"
Changelog = "https://github.com/iplweb/django-dev-helpers/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/django_dev_helpers"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
filterwarnings = [
    "ignore::RuntimeWarning:django_dev_helpers.safety",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "tests.settings"
